Windows: Tolerate GetShortPathNameW failure

This function is used by NMake Makefile generator, but when shortening path
fails, it previously returned an empty string.  `ERROR_ACCESS_DENIED` is
returned for paths within `C:\Program Files\WindowsApps`, which is
a special folder with limited access rights.  It looks like this is
[by design](https://superuser.com/a/1730061/213587).

Fixes: #24853